# stl-splitter

./: pyproject.toml
docs/: validation.md
src/stl_splitter/: __init__.py
src/stl_splitter/core/: __init__.py  validation.py
tests/: test_validation.py
