[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stl-splitter"
version = "0.1.0"
description = "STL Splitter"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
